v3.0/TOC.md
# TiDB Documentation

<!-- markdownlint-disable MD007 -->
<!-- markdownlint-disable MD032 -->

## Documentation List

+ Introduction
  - [TiDB Introduction](/v3.0/overview.md)
  + Benchmarks
    - [How to Test TiDB Using Sysbench](/v3.0/benchmark/how-to-run-sysbench.md)
    - [How to Run TPC-C Test on TiDB](/v3.0/benchmark/how-to-run-tpcc.md)
    - [Sysbench Performance Test - v3.0 vs. v2.1](/v3.0/benchmark/sysbench-v4.md)
    - [TPC-C Performance Test - v3.0 vs. v2.1](/v3.0/benchmark/tpcc.md)
    - [Interaction Test on Online Workloads and `ADD INDEX` Operations](/v3.0/benchmark/add-index-with-load.md)
    - [TiDB in Kubernetes Sysbench Test](/v3.0/benchmark/sysbench-in-k8s.md)
    - [DM 1.0-alpha Benchmark Report](/v3.0/benchmark/dm-v1-alpha.md)
    - [DM 1.0-GA Benchmark Report](/v3.0/benchmark/dm-v1.0-ga.md)
+ Concepts
  - [Architecture](/v3.0/architecture.md)
  + Key Features
    - [Horizontal Scalability](/v3.0/key-features.md#horizontal-scalability)
    - [MySQL Compatible Syntax](/v3.0/key-features.md#mysql-compatible-syntax)
    - [Replicate from and to MySQL](/v3.0/key-features.md#replicate-from-and-to-mysql)
    - [Distributed Transactions with Strong Consistency](/v3.0/key-features.md#distributed-transactions-with-strong-consistency)
    - [Cloud Native Architecture](/v3.0/key-features.md#cloud-native-architecture)
    - [Minimize ETL with HTAP](/v3.0/key-features.md#minimize-etl-with-htap)
    - [Fault Tolerance & Recovery with Raft](/v3.0/key-features.md#fault-tolerance--recovery-with-raft)
    - [Automatic Rebalancing](/v3.0/key-features.md#automatic-rebalancing)
    - [Deployment and Orchestration with Ansible, Kubernetes, Docker](/v3.0/key-features.md#deployment-and-orchestration-with-ansible-kubernetes-docker)
    - [JSON Support](/v3.0/key-features.md#json-support)
    - [Spark Integration](/v3.0/key-features.md#spark-integration)
    - [Read Historical Data Without Restoring from Backup](/v3.0/key-features.md#read-historical-data-without-restoring-from-backup)
    - [Fast Import and Restore of Data](/v3.0/key-features.md#fast-import-and-restore-of-data)
    - [Hybrid of Column and Row Storage](/v3.0/key-features.md#hybrid-of-column-and-row-storage)
    - [SQL Plan Management](/v3.0/key-features.md#sql-plan-management)
    - [Open Source](/v3.0/key-features.md#open-source)
    - [Online Schema Changes](/v3.0/key-features.md#online-schema-changes)
+ How-to
  + Get Started
    + Start a Cluster
      - [From Binary](/v3.0/how-to/get-started/deploy-tidb-from-binary.md)
      - [From Homebrew](/v3.0/how-to/get-started/deploy-tidb-from-homebrew.md)
      - [From DBdeployer](/v3.0/how-to/get-started/deploy-tidb-from-dbdeployer.md)
    - [Explore SQL with TiDB](/v3.0/how-to/get-started/explore-sql.md)
    - [Import Example Database](/v3.0/how-to/get-started/import-example-database.md)
    - [Read Historical Data](/v3.0/how-to/get-started/read-historical-data.md)
    - [TiDB Binlog Tutorial](/v3.0/how-to/get-started/tidb-binlog.md)
    - [TiDB Data Migration Tutorial](/v3.0/how-to/get-started/data-migration.md)
    - [TiDB Lightning Tutorial](/v3.0/how-to/get-started/tidb-lightning.md)
    - [TiSpark Quick Start Guide](/v3.0/how-to/get-started/tispark.md)
  + Deploy
    - [Hardware Recommendations](/v3.0/how-to/deploy/hardware-recommendations.md)
    + From Binary Tarball
      - [For Testing Environments](/v3.0/how-to/deploy/from-tarball/testing-environment.md)
      - [For Production Environments](/v3.0/how-to/deploy/from-tarball/production-environment.md)
    + Orchestrated Deployment
      - [Ansible Deployment (Recommended)](/v3.0/how-to/deploy/orchestrated/ansible.md)
      - [Ansible Offline Deployment](/v3.0/how-to/deploy/orchestrated/offline-ansible.md)
      - [Docker Deployment](/v3.0/how-to/deploy/orchestrated/docker.md)
    + Geographic Redundancy
      - [Overview](/v3.0/how-to/deploy/geographic-redundancy/overview.md)
      - [Configure Location Awareness](/v3.0/how-to/deploy/geographic-redundancy/location-awareness.md)
    - [Data Migration with Ansible](/v3.0/how-to/deploy/data-migration-with-ansible.md)
  + Configure
    - [Time Zone](/v3.0/how-to/configure/time-zone.md)
    - [Memory Control](/v3.0/how-to/configure/memory-control.md)
  + Secure
    + Transport Layer Security (TLS)
      - [Enable TLS For MySQL Clients](/v3.0/how-to/secure/enable-tls-clients.md)
      - [Enable TLS Between TiDB Components](/v3.0/how-to/secure/enable-tls-between-components.md)
    - [Generate Self-signed Certificates](/v3.0/how-to/secure/generate-self-signed-certificates.md)
  + Monitor
    - [Overview](/v3.0/how-to/monitor/overview.md)
    - [Monitor a TiDB Cluster](/v3.0/how-to/monitor/monitor-a-cluster.md)
  + Migrate
    - [Overview](/v3.0/how-to/migrate/overview.md)
    + Migrate from MySQL
      - [Migrate the Full Data](/v3.0/how-to/migrate/from-mysql.md)
      - [Migrate the Incremental Data](/v3.0/how-to/migrate/incrementally-from-mysql.md)
    - [Migrate from Aurora](/v3.0/how-to/migrate/from-aurora.md)
    - [Migrate from CSV](/v3.0/reference/tools/tidb-lightning/csv.md)
  + Maintain
    - [Common Ansible Operations](/v3.0/how-to/deploy/orchestrated/ansible-operations.md)
    - [Backup and Restore](/v3.0/how-to/maintain/backup-and-restore.md)
  + Identify Abnormal Queries
    - [Identify Slow Queries](/v3.0/how-to/maintain/identify-abnormal-queries/identify-slow-queries.md)
    - [Identify Expensive Queries](/v3.0/how-to/maintain/identify-abnormal-queries/identify-expensive-queries.md)
  + Scale
    - [Scale using Ansible](/v3.0/how-to/scale/with-ansible.md)
    - [Scale a TiDB Cluster](/v3.0/how-to/scale/horizontally.md)
  + Upgrade
    - [Upgrade to TiDB 3.0](/v3.0/how-to/upgrade/from-previous-version.md)
  - Troubleshoot
    - [Troubleshoot Cluster Setup](/v3.0/how-to/troubleshoot/cluster-setup.md)
    - [Troubleshoot TiDB Lightning](/v3.0/how-to/troubleshoot/tidb-lightning.md)
+ Reference
  + SQL
    - [MySQL Compatibility](/v3.0/reference/mysql-compatibility.md)
    + SQL Language Structure
      - [Literal Values](/v3.0/reference/sql/language-structure/literal-values.md)
      - [Schema Object Names](/v3.0/reference/sql/language-structure/schema-object-names.md)
      - [Keywords and Reserved Words](/v3.0/reference/sql/language-structure/keywords-and-reserved-words.md)
      - [User-Defined Variables](/v3.0/reference/sql/language-structure/user-defined-variables.md)
      - [Expression Syntax](/v3.0/reference/sql/language-structure/expression-syntax.md)
      - [Comment Syntax](/v3.0/reference/sql/language-structure/comment-syntax.md)
    + Data Types
      - [Overview](/v3.0/reference/sql/data-types/overview.md)
      - [Default Values](/v3.0/reference/sql/data-types/default-values.md)
      + Numeric Types
        - [`BIT`](/v3.0/reference/sql/data-types/numeric.md#bit-type)
        - [`BOOL|BOOLEAN`](/v3.0/reference/sql/data-types/numeric.md#boolean-type)
        - [`TINYINT`](/v3.0/reference/sql/data-types/numeric.md#tinyint-type)
        - [`SMALLINT`](/v3.0/reference/sql/data-types/numeric.md#smallint-type)
        - [`MEDIUMINT`](/v3.0/reference/sql/data-types/numeric.md#mediumint-type)
        - [`INT|INTEGER`](/v3.0/reference/sql/data-types/numeric.md#integer-type)
        - [`BIGINT`](/v3.0/reference/sql/data-types/numeric.md#bigint-type)
        - [`DECIMAL`](/v3.0/reference/sql/data-types/numeric.md#decimal-type)
        - [`FLOAT`](/v3.0/reference/sql/data-types/numeric.md#float-type)
        - [`DOUBLE`](/v3.0/reference/sql/data-types/numeric.md#double-type)
      + Date and Time Types
        - [`DATE`](/v3.0/reference/sql/data-types/date-and-time.md#date-type)
        - [`DATETIME`](/v3.0/reference/sql/data-types/date-and-time.md#datetime-type)
        - [`TIMESTAMP`](/v3.0/reference/sql/data-types/date-and-time.md#timestamp-type)
        - [`TIME`](/v3.0/reference/sql/data-types/date-and-time.md#time-type)
        - [`YEAR`](/v3.0/reference/sql/data-types/date-and-time.md#year-type)
      + String Types
        - [`CHAR`](/v3.0/reference/sql/data-types/string.md#char-type)
        - [`VARCHAR`](/v3.0/reference/sql/data-types/string.md#varchar-type)
        - [`TEXT`](/v3.0/reference/sql/data-types/string.md#text-type)
        - [`LONGTEXT`](/v3.0/reference/sql/data-types/string.md#longtext-type)
        - [`BINARY`](/v3.0/reference/sql/data-types/string.md#binary-type)
        - [`VARBINARY`](/v3.0/reference/sql/data-types/string.md#varbinary-type)
        - [`TINYBLOB`](/v3.0/reference/sql/data-types/string.md#tinyblob-type)
        - [`BLOB`](/v3.0/reference/sql/data-types/string.md#blob-type)
        - [`MEDIUMBLOB`](/v3.0/reference/sql/data-types/string.md#mediumblob-type)
        - [`LONGBLOB`](/v3.0/reference/sql/data-types/string.md#longblob-type)
        - [`ENUM`](/v3.0/reference/sql/data-types/string.md#enum-type)
        - [`SET`](/v3.0/reference/sql/data-types/string.md#set-type)
      - [JSON Type](/v3.0/reference/sql/data-types/json.md)
    + Functions and Operators
      - [Function and Operator Reference](/v3.0/reference/sql/functions-and-operators/reference.md)
      - [Type Conversion in Expression Evaluation](/v3.0/reference/sql/functions-and-operators/type-conversion.md)
      - [Operators](/v3.0/reference/sql/functions-and-operators/operators.md)
      - [Control Flow Functions](/v3.0/reference/sql/functions-and-operators/control-flow-functions.md)
      - [String Functions](/v3.0/reference/sql/functions-and-operators/string-functions.md)
      - [Numeric Functions and Operators](/v3.0/reference/sql/functions-and-operators/numeric-functions-and-operators.md)
      - [Date and Time Functions](/v3.0/reference/sql/functions-and-operators/date-and-time-functions.md)
      - [Bit Functions and Operators](/v3.0/reference/sql/functions-and-operators/bit-functions-and-operators.md)
      - [Cast Functions and Operators](/v3.0/reference/sql/functions-and-operators/cast-functions-and-operators.md)
      - [Encryption and Compression Functions](/v3.0/reference/sql/functions-and-operators/encryption-and-compression-functions.md)
      - [Information Functions](/v3.0/reference/sql/functions-and-operators/information-functions.md)
      - [JSON Functions](/v3.0/reference/sql/functions-and-operators/json-functions.md)
      - [Aggregate (GROUP BY) Functions](/v3.0/reference/sql/functions-and-operators/aggregate-group-by-functions.md)
      - [Window Functions](/v3.0/reference/sql/functions-and-operators/window-functions.md)
      - [Miscellaneous Functions](/v3.0/reference/sql/functions-and-operators/miscellaneous-functions.md)
      - [Precision Math](/v3.0/reference/sql/functions-and-operators/precision-math.md)
      - [List of Expressions for Pushdown](/v3.0/reference/sql/functions-and-operators/expressions-pushed-down.md)
    + SQL Statements
      - [`ADD COLUMN`](/v3.0/reference/sql/statements/add-column.md)
      - [`ADD INDEX`](/v3.0/reference/sql/statements/add-index.md)
      - [`ADMIN`](/v3.0/reference/sql/statements/admin.md)
      - [`ALTER DATABASE`](/v3.0/reference/sql/statements/alter-database.md)
      - [`ALTER TABLE`](/v3.0/reference/sql/statements/alter-table.md)
      - [`ALTER USER`](/v3.0/reference/sql/statements/alter-user.md)
      - [`ANALYZE TABLE`](/v3.0/reference/sql/statements/analyze-table.md)
      - [`BEGIN`](/v3.0/reference/sql/statements/begin.md)
      - [`COMMIT`](/v3.0/reference/sql/statements/commit.md)
      - [`CREATE DATABASE`](/v3.0/reference/sql/statements/create-database.md)
      - [`CREATE INDEX`](/v3.0/reference/sql/statements/create-index.md)
      - [`CREATE TABLE LIKE`](/v3.0/reference/sql/statements/create-table-like.md)
      - [`CREATE TABLE`](/v3.0/reference/sql/statements/create-table.md)
      - [`CREATE USER`](/v3.0/reference/sql/statements/create-user.md)
      - [`CREATE VIEW`](/v3.0/reference/sql/statements/create-view.md)
      - [`DEALLOCATE`](/v3.0/reference/sql/statements/deallocate.md)
      - [`DELETE`](/v3.0/reference/sql/statements/delete.md)
      - [`DESC`](/v3.0/reference/sql/statements/desc.md)
      - [`DESCRIBE`](/v3.0/reference/sql/statements/describe.md)
      - [`DO`](/v3.0/reference/sql/statements/do.md)
      - [`DROP COLUMN`](/v3.0/reference/sql/statements/drop-column.md)
      - [`DROP DATABASE`](/v3.0/reference/sql/statements/drop-database.md)
      - [`DROP INDEX`](/v3.0/reference/sql/statements/drop-index.md)
      - [`DROP TABLE`](/v3.0/reference/sql/statements/drop-table.md)
      - [`DROP USER`](/v3.0/reference/sql/statements/drop-user.md)
      - [`DROP VIEW`](/v3.0/reference/sql/statements/drop-view.md)
      - [`EXECUTE`](/v3.0/reference/sql/statements/execute.md)
      - [`EXPLAIN ANALYZE`](/v3.0/reference/sql/statements/explain-analyze.md)
      - [`EXPLAIN`](/v3.0/reference/sql/statements/explain.md)
      - [`FLUSH PRIVILEGES`](/v3.0/reference/sql/statements/flush-privileges.md)
      - [`FLUSH STATUS`](/v3.0/reference/sql/statements/flush-status.md)
      - [`FLUSH TABLES`](/v3.0/reference/sql/statements/flush-tables.md)
      - [`GRANT <privileges>`](/v3.0/reference/sql/statements/grant-privileges.md)
      - [`INSERT`](/v3.0/reference/sql/statements/insert.md)
      - [`KILL [TIDB]`](/v3.0/reference/sql/statements/kill.md)
      - [`LOAD DATA`](/v3.0/reference/sql/statements/load-data.md)
      - [`MODIFY COLUMN`](/v3.0/reference/sql/statements/modify-column.md)
      - [`PREPARE`](/v3.0/reference/sql/statements/prepare.md)
      - [`RECOVER TABLE`](/v3.0/reference/sql/statements/recover-table.md)
      - [`RENAME INDEX`](/v3.0/reference/sql/statements/rename-index.md)
      - [`RENAME TABLE`](/v3.0/reference/sql/statements/rename-table.md)
      - [`REPLACE`](/v3.0/reference/sql/statements/replace.md)
      - [`REVOKE <privileges>`](/v3.0/reference/sql/statements/revoke-privileges.md)
      - [`ROLLBACK`](/v3.0/reference/sql/statements/rollback.md)
      - [`SELECT`](/v3.0/reference/sql/statements/select.md)
      - [`SET [NAMES|CHARACTER SET]`](/v3.0/reference/sql/statements/set-names.md)
      - [`SET PASSWORD`](/v3.0/reference/sql/statements/set-password.md)
      - [`SET TRANSACTION`](/v3.0/reference/sql/statements/set-transaction.md)
      - [`SET [GLOBAL|SESSION] <variable>`](/v3.0/reference/sql/statements/set-variable.md)
      - [`SHOW CHARACTER SET`](/v3.0/reference/sql/statements/show-character-set.md)
      - [`SHOW COLLATION`](/v3.0/reference/sql/statements/show-collation.md)
      - [`SHOW [FULL] COLUMNS FROM`](/v3.0/reference/sql/statements/show-columns-from.md)
      - [`SHOW CREATE TABLE`](/v3.0/reference/sql/statements/show-create-table.md)
      - [`SHOW CREATE USER`](/v3.0/reference/sql/statements/show-create-user.md)
      - [`SHOW DATABASES`](/v3.0/reference/sql/statements/show-databases.md)
      - [`SHOW ENGINES`](/v3.0/reference/sql/statements/show-engines.md)
      - [`SHOW ERRORS`](/v3.0/reference/sql/statements/show-errors.md)
      - [`SHOW [FULL] FIELDS FROM`](/v3.0/reference/sql/statements/show-fields-from.md)
      - [`SHOW GRANTS`](/v3.0/reference/sql/statements/show-grants.md)
      - [`SHOW INDEXES [FROM|IN]`](/v3.0/reference/sql/statements/show-indexes.md)
      - [`SHOW INDEX [FROM|IN]`](/v3.0/reference/sql/statements/show-index.md)
      - [`SHOW KEYS [FROM|IN]`](/v3.0/reference/sql/statements/show-keys.md)
      - [`SHOW PRIVILEGES`](/v3.0/reference/sql/statements/show-privileges.md)
      - [`SHOW [FULL] PROCESSSLIST`](/v3.0/reference/sql/statements/show-processlist.md)
      - [`SHOW SCHEMAS`](/v3.0/reference/sql/statements/show-schemas.md)
      - [`SHOW [FULL] TABLES`](/v3.0/reference/sql/statements/show-tables.md)
      - [`SHOW TABLE REGIONS`](/v3.0/reference/sql/statements/show-table-regions.md)
      - [`SHOW TABLE STATUS`](/v3.0/reference/sql/statements/show-table-status.md)
      - [`SHOW [GLOBAL|SESSION] VARIABLES`](/v3.0/reference/sql/statements/show-variables.md)
      - [`SHOW WARNINGS`](/v3.0/reference/sql/statements/show-warnings.md)
      - [`SPLIT REGION`](/v3.0/reference/sql/statements/split-region.md)
      - [`START TRANSACTION`](/v3.0/reference/sql/statements/start-transaction.md)
      - [`TRACE`](/v3.0/reference/sql/statements/trace.md)
      - [`TRUNCATE`](/v3.0/reference/sql/statements/truncate.md)
      - [`UPDATE`](/v3.0/reference/sql/statements/update.md)
      - [`USE`](/v3.0/reference/sql/statements/use.md)
    - [Constraints](/v3.0/reference/sql/constraints.md)
    - [Generated Columns](/v3.0/reference/sql/generated-columns.md)
    - [Partitioning](/v3.0/reference/sql/partitioning.md)
    - [Character Set](/v3.0/reference/sql/character-set.md)
    - [SQL Mode](/v3.0/reference/sql/sql-mode.md)
    - [Views](/v3.0/reference/sql/views.md)
  + Configuration
    + tidb-server
      - [MySQL System Variables](/v3.0/reference/configuration/tidb-server/mysql-variables.md)
      - [TiDB Specific System Variables](/v3.0/reference/configuration/tidb-server/tidb-specific-variables.md)
      - [Configuration Flags](/v3.0/reference/configuration/tidb-server/configuration.md)
      - [Configuration File](/v3.0/reference/configuration/tidb-server/configuration-file.md)
    + pd-server
      - [Configuration Flags](/v3.0/reference/configuration/pd-server/configuration.md)
      - [Configuration File](/v3.0/reference/configuration/pd-server/configuration-file.md)
    + tikv-server
      - [Configuration Flags](/v3.0/reference/configuration/tikv-server/configuration.md)
      - [Configuration File](/v3.0/reference/configuration/tikv-server/configuration-file.md)
  + Security
    - [Security Compatibility with MySQL](/v3.0/reference/security/compatibility.md)
    - [The TiDB Access Privilege System](/v3.0/reference/security/privilege-system.md)
    - [TiDB User Account Management](/v3.0/reference/security/user-account-management.md)
    - [Role-Based Access Control](/v3.0/reference/security/role-based-access-control.md)
    - [Certificate-Based Authentication](/v3.0/reference/security/cert-based-authentication.md)
  + Transactions
    - [Overview](/v3.0/reference/transactions/overview.md)
    - [Transaction Model](/v3.0/reference/transactions/transaction-model.md)
    - [Isolation Levels](/v3.0/reference/transactions/transaction-isolation.md)
    - [Pessimistic Transactions](/v3.0/reference/transactions/transaction-pessimistic.md)
  + System Databases
    - [`mysql`](/v3.0/reference/system-databases/mysql.md)
    - [`information_schema`](/v3.0/reference/system-databases/information-schema.md)
  - [Errors Codes](/v3.0/reference/error-codes.md)
  - [Supported Client Drivers](/v3.0/reference/supported-clients.md)
  + Garbage Collection (GC)
    - [GC Overview](/v3.0/reference/garbage-collection/overview.md)
    - [GC Configuration](/v3.0/reference/garbage-collection/configuration.md)
  + Performance
    - [Overview](/v3.0/reference/performance/sql-optimizer-overview.md)
    - [Understanding the Query Execution Plan](/v3.0/reference/performance/understanding-the-query-execution-plan.md)
    - [Introduction to Statistics](/v3.0/reference/performance/statistics.md)
    - [Optimizer Hints](/v3.0/reference/performance/optimizer-hints.md)
    - [Check the TiDB Cluster Status Using SQL Statements](/v3.0/reference/performance/check-cluster-status-using-sql-statements.md)
    - [Execution Plan Binding](/v3.0/reference/performance/execution-plan-bind.md)
    - [Statement Summary Table](/v3.0/reference/performance/statement-summary.md)
    - [Tune TiKV](/v3.0/reference/performance/tune-tikv.md)
  + Key Monitoring Metrics
    - [Overview](/v3.0/reference/key-monitoring-metrics/overview-dashboard.md)
    - [TiDB](/v3.0/reference/key-monitoring-metrics/tidb-dashboard.md)
    - [PD](/v3.0/reference/key-monitoring-metrics/pd-dashboard.md)
    - [TiKV](/v3.0/reference/key-monitoring-metrics/tikv-dashboard.md)
  - [Alert Rules](/v3.0/reference/alert-rules.md)
  + Best Practices
    - [Highly Concurrent Write Best Practices](/v3.0/reference/best-practices/high-concurrency.md)
    - [HAProxy Best Practices](/v3.0/reference/best-practices/haproxy.md)
    - [PD Scheduling Best Practices](/v3.0/reference/best-practices/pd-scheduling.md)
    - [Grafana Best Practices](/v3.0/reference/best-practices/grafana-monitor.md)
    - [TiKV Performance Tuning with Massive Regions](/v3.0/reference/best-practices/massive-regions.md)
  - [TiSpark](/v3.0/reference/tispark.md)
  + TiDB Binlog
    - [Overview](/v3.0/reference/tidb-binlog/overview.md)
    - [Deploy](/v3.0/reference/tidb-binlog/deploy.md)
    - [Maintain](/v3.0/reference/tidb-binlog/maintain.md)
    - [Monitor](/v3.0/reference/tidb-binlog/monitor.md)
    - [Upgrade](/v3.0/reference/tidb-binlog/upgrade.md)
    - [Reparo](/v3.0/reference/tidb-binlog/reparo.md)
    - [Binlog Slave Client](/v3.0/reference/tidb-binlog/binlog-slave-client.md)
    - [Glossary](/v3.0/reference/tidb-binlog/glossary.md)
    + Troubleshoot
      - [Troubleshooting](/v3.0/reference/tidb-binlog/troubleshoot/binlog.md)
      - [Error Handling](/v3.0/reference/tidb-binlog/troubleshoot/error-handling.md)
    - [FAQ](/v3.0/reference/tidb-binlog/faq.md)
  + Tools
    - [Mydumper](/v3.0/reference/tools/mydumper.md)
    - [Syncer](/v3.0/reference/tools/syncer.md)
    - [Loader](/v3.0/reference/tools/loader.md)
    + TiDB Data Migration
      + Overview
        - [DM Overview](/v3.0/reference/tools/data-migration/overview.md)
        - [Restrictions](/v3.0/reference/tools/data-migration/overview.md#usage-restrictions)
        - [DM-worker](/v3.0/reference/tools/data-migration/dm-worker-intro.md)
        - [DM Relay Log](/v3.0/reference/tools/data-migration/dm-worker-intro.md)
      + Features
        - [Table Routing](/v3.0/reference/tools/data-migration/features/overview.md#table-routing)
        - [Black and White Lists](/v3.0/reference/tools/data-migration/features/overview.md#black-and-white-table-lists)
        - [Binlog Event Filter](/v3.0/reference/tools/data-migration/features/overview.md#binlog-event-filter)
        - [Replication Delay Monitoring](/v3.0/reference/tools/data-migration/features/overview.md#replication-delay-monitoring)
        + Sharding Support
          - [Introduction](/v3.0/reference/tools/data-migration/features/shard-merge.md)
          - [Restrictions](/v3.0/reference/tools/data-migration/features/shard-merge.md#restrictions)
          - [Handle Sharding DDL Locks Manually](/v3.0/reference/tools/data-migration/features/manually-handling-sharding-ddl-locks.md)
      + Usage Scenarios
        - [Simple Scenario](/v3.0/reference/tools/data-migration/usage-scenarios/simple-replication.md)
        - [Shard Merge Scenario](/v3.0/reference/tools/data-migration/usage-scenarios/shard-merge.md)
        - [Shard Merge Best Practices](/v3.0/reference/tools/data-migration/usage-scenarios/best-practice-dm-shard.md)
      - [Deploy](/v3.0/reference/tools/data-migration/deploy.md)
      + Configure
        - [Overview](/v3.0/reference/tools/data-migration/configure/overview.md)
        - [DM-master Configuration](/v3.0/reference/tools/data-migration/configure/dm-master-configuration-file.md)
        - [DM-worker Configuration](/v3.0/reference/tools/data-migration/configure/dm-worker-configuration-file.md)
        - [Task Configuration](/v3.0/reference/tools/data-migration/configure/task-configuration-file.md)
      + Manage the DM Cluster
        - [Cluster Operations](/v3.0/reference/tools/data-migration/cluster-operations.md)
        - [Cluster Upgrade](/v3.0/reference/tools/data-migration/upgrade.md)
      + Manage Replication Tasks
        - [Manage Tasks](/v3.0/reference/tools/data-migration/manage-tasks.md)
        - [Precheck Tasks](/v3.0/reference/tools/data-migration/precheck.md)
        - [Query Task Status](/v3.0/reference/tools/data-migration/query-status.md)
        - [Skip or Replace Abnormal SQL Statements](/v3.0/reference/tools/data-migration/skip-replace-sqls.md)
      - [Monitor](/v3.0/reference/tools/data-migration/monitor.md)
      + Migrate from MySQL compatible database
        - [Migrate from Aurora](/v3.0/how-to/migrate/from-aurora.md)
      + Troubleshoot
        - [DM Troubleshooting](/v3.0/reference/tools/data-migration/troubleshoot/dm.md)
        - [Error Description](/v3.0/reference/tools/data-migration/troubleshoot/error-system.md)
        - [Error Handling](/v3.0/reference/tools/data-migration/troubleshoot/error-handling.md)
      - [FAQ](/v3.0/reference/tools/data-migration/faq.md)
      + Releases
        + v1.0
          - [1.0.2](/v3.0/reference/tools/data-migration/releases/1.0.2.md)
          - [1.0.3](/v3.0/reference/tools/data-migration/releases/1.0.3.md)
      - [TiDB DM Glossary](/v3.0/reference/tools/data-migration/glossary.md)
    + TiDB Lightning
      - [Overview](/v3.0/reference/tools/tidb-lightning/overview.md)
      - [Deployment](/v3.0/reference/tools/tidb-lightning/deployment.md)
      - [Configuration](/v3.0/reference/tools/tidb-lightning/config.md)
      - [Checkpoints](/v3.0/reference/tools/tidb-lightning/checkpoints.md)
      - [Table Filter](/v3.0/reference/tools/tidb-lightning/table-filter.md)
      - [CSV Support](/v3.0/reference/tools/tidb-lightning/csv.md)
      - [TiDB-backend](/v3.0/reference/tools/tidb-lightning/tidb-backend.md)
      - [Web Interface](/v3.0/reference/tools/tidb-lightning/web.md)
      - [Monitor](/v3.0/reference/tools/tidb-lightning/monitor.md)
      - [Troubleshoot](/v3.0/how-to/troubleshoot/tidb-lightning.md)
      - [FAQ](/v3.0/faq/tidb-lightning.md)
    - [sync-diff-inspector](/v3.0/reference/tools/sync-diff-inspector/overview.md)
    - [PD Control](/v3.0/reference/tools/pd-control.md)
    - [PD Recover](/v3.0/reference/tools/pd-recover.md)
    - [TiKV Control](/v3.0/reference/tools/tikv-control.md)
    - [TiDB Control](/v3.0/reference/tools/tidb-control.md)
    - [Download](/v3.0/reference/tools/download.md)
+ TiDB in Kubernetes
  - [About TiDB Operator](/v3.0/tidb-in-kubernetes/tidb-operator-overview.md)
  + Get Started
    - [kind](/v3.0/tidb-in-kubernetes/get-started/deploy-tidb-from-kubernetes-kind.md)
    - [GKE](/v3.0/tidb-in-kubernetes/get-started/deploy-tidb-from-kubernetes-gke.md)
    - [Minikube](/v3.0/tidb-in-kubernetes/get-started/deploy-tidb-from-kubernetes-minikube.md)
  + Deploy
    - [Prerequisites](/v3.0/tidb-in-kubernetes/deploy/prerequisites.md)
    - [TiDB Operator](/v3.0/tidb-in-kubernetes/deploy/tidb-operator.md)
    - [TiDB in General Kubernetes](/v3.0/tidb-in-kubernetes/deploy/general-kubernetes.md)
    - [TiDB in AWS EKS](/v3.0/tidb-in-kubernetes/deploy/aws-eks.md)
    - [TiDB in GCP GKE](/v3.0/tidb-in-kubernetes/deploy/gcp-gke.md)
    - [TiDB in Alibaba Cloud ACK](/v3.0/tidb-in-kubernetes/deploy/alibaba-cloud.md)
    - [Access TiDB in Kubernetes](/v3.0/tidb-in-kubernetes/deploy/access-tidb.md)
  + Configure
    - [Cluster Initialization](/v3.0/tidb-in-kubernetes/initialize-cluster.md)
  - [Monitor](/v3.0/tidb-in-kubernetes/monitor/tidb-in-kubernetes.md)
  + Maintain
    - [Destroy a TiDB cluster](/v3.0/tidb-in-kubernetes/maintain/destroy-tidb-cluster.md)
    - [Maintain a Hosting Kubernetes Node](/v3.0/tidb-in-kubernetes/maintain/kubernetes-node.md)
    - [Backup and Restore](/v3.0/tidb-in-kubernetes/maintain/backup-and-restore.md)
    - [Restore Data with TiDB Lightning](/v3.0/tidb-in-kubernetes/maintain/lightning.md)
    - [Collect Logs](/v3.0/tidb-in-kubernetes/maintain/log-collecting.md)
    - [Automatic Failover](/v3.0/tidb-in-kubernetes/maintain/auto-failover.md)
    - [TiDB Binlog](/v3.0/tidb-in-kubernetes/maintain/tidb-binlog.md)
  - [Scale](/v3.0/tidb-in-kubernetes/scale-in-kubernetes.md)
  + Upgrade
    - [TiDB Cluster](/v3.0/tidb-in-kubernetes/upgrade/tidb-cluster.md)
    - [TiDB Operator](/v3.0/tidb-in-kubernetes/upgrade/tidb-operator.md)
  + Reference
    + Configuration
      - [TiDB Cluster](/v3.0/tidb-in-kubernetes/reference/configuration/tidb-cluster.md)
      - [Backup](/v3.0/tidb-in-kubernetes/reference/configuration/backup.md)
      - [PV](/v3.0/tidb-in-kubernetes/reference/configuration/storage-class.md)
      - [TiDB Drainer](/v3.0/tidb-in-kubernetes/reference/configuration/tidb-drainer.md)
    + Tools
      - [tkctl](/v3.0/tidb-in-kubernetes/reference/tools/tkctl.md)
      - [Tools in Kubernetes](/v3.0/tidb-in-kubernetes/reference/tools/in-kubernetes.md)
  - [Troubleshoot](/v3.0/tidb-in-kubernetes/troubleshoot.md)
  - [FAQs](/v3.0/tidb-in-kubernetes/faq.md)
+ FAQs
  - [TiDB FAQs](/v3.0/faq/tidb.md)
  - [TiDB Lightning FAQs](/v3.0/faq/tidb-lightning.md)
  - [Upgrade FAQs](/v3.0/faq/upgrade.md)
+ Support
  - [Support Resources](/v3.0/support-resources.md)
  - [Report an Issue](/v3.0/report-issue.md)
+ Contribute
  - [Contribute to TiDB](/v3.0/contribute.md#contribute-to-tidb)
  - [Improve the Docs](/v3.0/contribute.md#improve-the-docs)
- [Adopters](/v3.0/adopters.md)
- [Roadmap](/v3.0/roadmap.md)
+ [Releases](/v3.0/releases/rn.md)
  + v3.0
    - [3.0.10](/v3.0/releases/3.0.10.md)
    - [3.0.9](/v3.0/releases/3.0.9.md)
    - [3.0.8](/v3.0/releases/3.0.8.md)
    - [3.0.7](/v3.0/releases/3.0.7.md)
    - [3.0.6](/v3.0/releases/3.0.6.md)
    - [3.0.5](/v3.0/releases/3.0.5.md)
    - [3.0.4](/v3.0/releases/3.0.4.md)
    - [3.0.3](/v3.0/releases/3.0.3.md)
    - [3.0.2](/v3.0/releases/3.0.2.md)
    - [3.0.1](/v3.0/releases/3.0.1.md)
    - [3.0 GA](/v3.0/releases/3.0-ga.md)
    - [3.0.0-rc.3](/v3.0/releases/3.0.0-rc.3.md)
    - [3.0.0-rc.2](/v3.0/releases/3.0.0-rc.2.md)
    - [3.0.0-rc.1](/v3.0/releases/3.0.0-rc.1.md)
    - [3.0.0-beta.1](/v3.0/releases/3.0.0-beta.1.md)
    - [3.0.0-beta](/v3.0/releases/3.0beta.md)
  + v2.1
    - [2.1.19](/v3.0/releases/2.1.19.md)
    - [2.1.18](/v3.0/releases/2.1.18.md)
    - [2.1.17](/v3.0/releases/2.1.17.md)
    - [2.1.16](/v3.0/releases/2.1.16.md)
    - [2.1.15](/v3.0/releases/2.1.15.md)
    - [2.1.14](/v3.0/releases/2.1.14.md)
    - [2.1.13](/v3.0/releases/2.1.13.md)
    - [2.1.12](/v3.0/releases/2.1.12.md)
    - [2.1.11](/v3.0/releases/2.1.11.md)
    - [2.1.10](/v3.0/releases/2.1.10.md)
    - [2.1.9](/v3.0/releases/2.1.9.md)
    - [2.1.8](/v3.0/releases/2.1.8.md)
    - [2.1.7](/v3.0/releases/2.1.7.md)
    - [2.1.6](/v3.0/releases/2.1.6.md)
    - [2.1.5](/v3.0/releases/2.1.5.md)
    - [2.1.4](/v3.0/releases/2.1.4.md)
    - [2.1.3](/v3.0/releases/2.1.3.md)
    - [2.1.2](/v3.0/releases/2.1.2.md)
    - [2.1.1](/v3.0/releases/2.1.1.md)
    - [2.1 GA](/v3.0/releases/2.1ga.md)
    - [2.1 RC5](/v3.0/releases/21rc5.md)
    - [2.1 RC4](/v3.0/releases/21rc4.md)
    - [2.1 RC3](/v3.0/releases/21rc3.md)
    - [2.1 RC2](/v3.0/releases/21rc2.md)
    - [2.1 RC1](/v3.0/releases/21rc1.md)
    - [2.1 Beta](/v3.0/releases/21beta.md)
  + v2.0
    - [2.0.11](/v3.0/releases/2.0.11.md)
    - [2.0.10](/v3.0/releases/2.0.10.md)
    - [2.0.9](/v3.0/releases/209.md)
    - [2.0.8](/v3.0/releases/208.md)
    - [2.0.7](/v3.0/releases/207.md)
    - [2.0.6](/v3.0/releases/206.md)
    - [2.0.5](/v3.0/releases/205.md)
    - [2.0.4](/v3.0/releases/204.md)
    - [2.0.3](/v3.0/releases/203.md)
    - [2.0.2](/v3.0/releases/202.md)
    - [2.0.1](/v3.0/releases/201.md)
    - [2.0](/v3.0/releases/2.0ga.md)
    - [2.0 RC5](/v3.0/releases/2rc5.md)
    - [2.0 RC4](/v3.0/releases/2rc4.md)
    - [2.0 RC3](/v3.0/releases/2rc3.md)
    - [2.0 RC1](/v3.0/releases/2rc1.md)
    - [1.1 Beta](/v3.0/releases/11beta.md)
    - [1.1 Alpha](/v3.0/releases/11alpha.md)
  + v1.0
    - [1.0.8](/v3.0/releases/108.md)
    - [1.0.7](/v3.0/releases/107.md)
    - [1.0.6](/v3.0/releases/106.md)
    - [1.0.5](/v3.0/releases/105.md)
    - [1.0.4](/v3.0/releases/104.md)
    - [1.0.3](/v3.0/releases/103.md)
    - [1.0.2](/v3.0/releases/102.md)
    - [1.0.1](/v3.0/releases/101.md)
    - [1.0](/v3.0/releases/ga.md)
    - [Pre-GA](/v3.0/releases/prega.md)
    - [RC4](/v3.0/releases/rc4.md)
    - [RC3](/v3.0/releases/rc3.md)
    - [RC2](/v3.0/releases/rc2.md)
    - [RC1](/v3.0/releases/rc1.md)
+ [Glossary](/v3.0/glossary.md)